# chameleon-chess

./: Cargo.toml  justfile  readme.md  shell.nix
examples/: magics.rs  perft.rs
horsey-bin/: Cargo.toml
horsey-bin/src/: main.rs
horsey-lib/: Cargo.toml  contributing.md  readme.md
horsey-lib/benches/: movegen.rs
horsey-lib/src/: lib.rs  parsing.rs
horsey-lib/src/brain/: feature.rs  mod.rs  nnue.rs
horsey-lib/src/chess/: action.rs  bitboard.rs  castling_rights.rs  colour.rs  fen.rs  magic_tables.rs  mod.rs  perft.rs  piece.rs  position.rs  square.rs  zobrist.rs
horsey-lib/src/epd/: mod.rs  operation.rs
horsey-lib/src/pgn/: mod.rs  nag.rs  parse.rs
horsey-lib/src/polyglot/: mod.rs
horsey-lib/src/search/: node.rs  worker.rs
horsey-lib/src/uci/: commands.rs  endpoint.rs  mod.rs  options.rs
src/: bitboard.rs  lib.rs  lookup_tables.rs  main.rs  move.rs  parsing.rs  position.rs  square.rs  tests.rs
src/board/: action.rs  bitboard.rs  castling_rights.rs  history.rs  lookup_tables.rs  mod.rs  perft.rs  piece.rs  position.rs  square.rs  zobrist.rs
src/brain/: feature.rs  mod.rs  nnue.rs
src/brain/training/: batcher.rs  mod.rs  model.rs  selfplay.rs
src/chess/: action.rs  bitboard.rs  colour.rs  fen.rs  history.rs  magic_tables.rs  mod.rs  perft.rs  pgn.rs  piece.rs  position.rs  score.rs  square.rs  zobrist.rs
src/game/: action.rs  bitboard.rs  castling_rights.rs  colour.rs  fen.rs  mod.rs  opening.rs  perft.rs  piece.rs  position.rs  score.rs  square.rs
src/pgn/: mod.rs  parse.rs
src/protocols/: mod.rs  uci.rs
src/protocols/uci/: commands.rs  endpoint.rs  mod.rs  options.rs  search.rs
src/search/: mod.rs  node.rs  worker.rs
src/uci/: commands.rs  mod.rs  search.rs
