[package]
name = "chameleon-chess"
version = "0.1.0"
edition = "2021"
authors = ["Aloïs Rautureau <alois.rautureau@ens-rennes.fr>"]
license = "MIT OR Apache 2.0"
description = "A chess engine that adapts to its opponent."

[dependencies]
heapless = "0.8"
thiserror = "2.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4"
num_cpus = "1.16"
rand = { version = "0.8.5", features = ["small_rng"] }

burn = { version = "0.15", features = ["wgpu", "train"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bitstream-io = { version = "2.6", optional = true }


[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = true

[profile.dev]
opt-level = 2
incremental = true

[features]
default = ["perft", "serde"]
perft = []
serde = ["dep:serde", "dep:bitstream-io"]
train = ["dep:burn"]


