[package]
name = "horsey"
version = "0.1.0"
edition = "2024"
authors = ["Aloïs Rautureau <thinkingrocks@proton.me>"]
license = "AGPL-3.0-only"
description = "Efficient and complete chess library."

[dependencies]
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
log = { version = "0.4", default-features = false, optional = true }
num_cpus = { version = "1.16", default-features = false }
heapless = { version = "0.8", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"], optional = true }
bitstream-io = { version = "2.6", default-features = false, optional = true }

[features]
default = []
pgn = []
epd = []
log = ["dep:log"]
serde = ["dep:serde", "dep:bitstream-io"]

